@@ -84,6 +84,8 @@ FIXES
 
  * Lookup field too narrow in report attribute window
 
+ * CustomForm widget minor fixes
+
 
 
 
